--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -4,7 +4,7 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/white"
+        android:background="@drawable/astrology_background"
         android:padding="16dp">
 
         <!-- Header with Title -->
@@ -13,126 +13,108 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
-            android:fontFamily="@font/philosopher_regular"
+            android:fontFamily="@font/poppins_regular"
             android:gravity="center"
-            android:text="Profile Details"
-            android:textColor="@color/black"
-            android:textSize="24sp"
+            android:text="Birth Details"
+            android:textColor="@color/gray"
+            android:textSize="18sp"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <!-- Name Field -->
-        <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/nameInputLayout"
-            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="24dp"
-            app:boxStrokeColor="@color/orange"
-            app:hintTextColor="@color/orange"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/profile_header">
 
-            <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/et_name"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="Full Name"
-                android:inputType="textPersonName" />
-
-        </com.google.android.material.textfield.TextInputLayout>
-
-        <!-- Name Field -->
-        <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/genderInputLayout"
-            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-            android:layout_width="0dp"
+        <EditText
+            android:id="@+id/et_name"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
-            app:boxStrokeColor="@color/orange"
-            app:hintTextColor="@color/orange"
+            android:background="@drawable/edit_text_background"
+            android:fontFamily="@font/poppins_regular"
+            android:hint="Enter Name"
+            android:inputType="textPersonName"
+            android:padding="12dp"
+            android:textColor="@color/black"
+            android:textColorHint="@color/gray"
+            android:textSize="16sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/nameInputLayout">
+            app:layout_constraintTop_toBottomOf="@+id/profile_header" />
 
-            <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/et_gender"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="Gender"
-                android:inputType="textPersonName" />
-
-        </com.google.android.material.textfield.TextInputLayout>
-
-        <!-- Date of Birth Field -->
-        <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/dobInputLayout"
-            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-            android:layout_width="0dp"
+        <EditText
+            android:id="@+id/et_gender"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
-            app:boxStrokeColor="@color/orange"
-            app:hintTextColor="@color/orange"
+            android:background="@drawable/edit_text_background"
+            android:fontFamily="@font/poppins_regular"
+            android:hint="Enter Gender"
+            android:inputType="text"
+            android:padding="12dp"
+            android:textColor="@color/black"
+            android:textColorHint="@color/gray"
+            android:textSize="16sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/genderInputLayout">
+            app:layout_constraintTop_toBottomOf="@+id/et_name" />
 
-            <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/et_dob"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="Date of Birth (DD/MM/YYYY)" />
 
-        </com.google.android.material.textfield.TextInputLayout>
-
-        <!-- Time of Birth Field -->
-        <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/timeOfBirthInputLayout"
-            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-            android:layout_width="0dp"
+        <EditText
+            android:id="@+id/et_dob"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
-            app:boxStrokeColor="@color/orange"
-            app:hintTextColor="@color/orange"
+            android:background="@drawable/edit_text_background"
+            android:fontFamily="@font/poppins_regular"
+            android:hint="Enter DOB"
+            android:inputType="text"
+            android:padding="12dp"
+            android:textColor="@color/black"
+            android:textColorHint="@color/gray"
+            android:textSize="16sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/dobInputLayout">
+            app:layout_constraintTop_toBottomOf="@+id/et_gender" />
 
-            <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/et_time_of_birth"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="Time of Birth" />
 
-        </com.google.android.material.textfield.TextInputLayout>
-
-        <!-- Email Field -->
-        <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/placeInputLayout"
-            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-            android:layout_width="0dp"
+        <EditText
+            android:id="@+id/et_time_of_birth"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
-            app:boxStrokeColor="@color/orange"
-            app:hintTextColor="@color/orange"
+            android:background="@drawable/edit_text_background"
+            android:fontFamily="@font/poppins_regular"
+            android:hint="Enter Time of Birth"
+            android:inputType="text"
+            android:padding="12dp"
+            android:textColor="@color/black"
+            android:textColorHint="@color/gray"
+            android:textSize="16sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/timeOfBirthInputLayout">
+            app:layout_constraintTop_toBottomOf="@+id/et_dob" />
 
-            <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/et_place"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="Place of Birth"
-                android:inputType="textEmailAddress" />
 
-        </com.google.android.material.textfield.TextInputLayout>
+        <EditText
+            android:id="@+id/et_place"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:background="@drawable/edit_text_background"
+            android:fontFamily="@font/poppins_regular"
+            android:hint="Enter Place of Birth"
+            android:inputType="textPostalAddress"
+            android:padding="12dp"
+            android:textColor="@color/black"
+            android:textColorHint="@color/gray"
+            android:textSize="16sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/et_time_of_birth" />
+
 
         <!-- Submit Button -->
-        <com.google.android.material.button.MaterialButton
+        <Button
             android:id="@+id/btn_submit"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
@@ -140,10 +122,9 @@
             android:background="@drawable/button_background"
             android:text="Submit"
             android:textColor="@android:color/white"
-            app:backgroundTint="@null"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/placeInputLayout" />
+            app:layout_constraintTop_toBottomOf="@+id/et_place" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
