--- a/app/src/main/res/menu/bottom_navigation_menu.xml
+++ b/app/src/main/res/menu/bottom_navigation_menu.xml
@@ -1,10 +1,10 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
         android:id="@+id/nav_home"
-        android:icon="@drawable/logo"
+        android:icon="@drawable/home"
         android:title="Home" />
     <item
         android:id="@+id/nav_trending"
-        android:icon="@drawable/logo"
+        android:icon="@drawable/trending"
         android:title="Trending" />
 </menu>
