--- a/app/src/main/res/drawable/edit_text_background.xml
+++ b/app/src/main/res/drawable/edit_text_background.xml
@@ -2,14 +2,14 @@
     <solid android:color="#FFFFFF" /> <!-- Background color of the EditText -->
 
     <stroke
-        android:width="2dp"
-        android:color="#F48534" /> <!-- Stroke color and width -->
+        android:width="1dp"
+        android:color="@color/orange" /> <!-- Stroke color and width -->
 
     <corners android:radius="8dp" /> <!-- Rounded corners -->
 
     <padding
-        android:left="10dp"
-        android:top="10dp"
-        android:right="10dp"
-        android:bottom="10dp" /> <!-- Padding inside the EditText -->
+        android:bottom="4dp"
+        android:left="4dp"
+        android:right="4dp"
+        android:top="4dp" /> <!-- Padding inside the EditText -->
 </shape>
