--- a/app/src/main/res/layout/item_banner.xml
+++ b/app/src/main/res/layout/item_banner.xml
@@ -6,10 +6,10 @@
         android:id="@+id/banner_image"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/cardview_dark_background"
+        android:background="@drawable/astrology_background"
         android:gravity="center"
         android:scaleType="centerCrop"
         android:text="Will my ex come back?"
-        android:textColor="@color/white" />
+        android:textColor="@color/black" />
 
 </FrameLayout>
