--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -12,10 +12,11 @@
             android:layout_height="?attr/actionBarSize"
             android:background="@color/white"
             android:elevation="4dp"
+            android:textSize="12sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:title="My Toolbar"
+            app:title="iastro"
             app:titleTextColor="@color/black" />
 
         <!-- FrameLayout to hold Fragments -->
