DOB calender, gender popup, validation, time pciker

--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -31,6 +31,7 @@
             android:layout_marginTop="16dp"
             android:background="@drawable/edit_text_background"
             android:fontFamily="@font/poppins_regular"
+            android:gravity="start|center_vertical"
             android:hint="Enter Name"
             android:inputType="textPersonName"
             android:padding="12dp"
@@ -47,9 +48,10 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
             android:background="@drawable/edit_text_background"
+            android:focusable="false"
             android:fontFamily="@font/poppins_regular"
-            android:hint="Enter Gender"
-            android:inputType="text"
+            android:hint="Select Gender"
+            android:inputType="none"
             android:padding="12dp"
             android:textColor="@color/black"
             android:textColorHint="@color/gray"
@@ -65,8 +67,11 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
             android:background="@drawable/edit_text_background"
+            android:clickable="true"
+            android:focusable="false"
+            android:focusableInTouchMode="false"
             android:fontFamily="@font/poppins_regular"
-            android:hint="Enter DOB"
+            android:hint="Select DOB (DD/MM/YYYY)"
             android:inputType="text"
             android:padding="12dp"
             android:textColor="@color/black"
@@ -83,8 +88,11 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
             android:background="@drawable/edit_text_background"
+            android:clickable="true"
+            android:focusable="false"
+            android:focusableInTouchMode="false"
             android:fontFamily="@font/poppins_regular"
-            android:hint="Enter Time of Birth"
+            android:hint="Select Time (HH:MM AM/PM)"
             android:inputType="text"
             android:padding="12dp"
             android:textColor="@color/black"
