--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,4 +1,18 @@
-<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?><!-- styles.xml -->
 <resources>
+
+
+    <!-- Custom TimePickerDialog Theme -->
+    <style name="CustomTimePickerDialog" parent="Theme.MaterialComponents.Light.Dialog">
+        <item name="android:timePickerStyle">@style/CustomTimePickerStyle</item>
+    </style>
+
+    <!-- Custom TimePicker Style -->
+    <style name="CustomTimePickerStyle" parent="android:Widget.Material.TimePicker">
+        <item name="android:headerBackground">@color/orange</item>
+        <item name="android:numbersTextColor">@color/black</item>
+        <item name="android:background">@color/white</item>
+    </style>
+
 
 </resources>
