--- a/app/src/main/res/drawable/trending.xml
+++ b/app/src/main/res/drawable/trending.xml
@@ -1,15 +1,9 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
     android:width="800dp"
     android:height="800dp"
-    android:viewportWidth="32"
-    android:viewportHeight="32">
+    android:viewportWidth="52"
+    android:viewportHeight="52">
   <path
-      android:pathData="M16,30A10,10 0,0 1,6 20C6,17 7.93,5.33 8,4.84a1,1 0,0 1,1.92 -0.21l2.85,7.13 2.25,-9a1,1 0,0 1,1.94 0l2.25,9 2.85,-7.13A1,1 0,0 1,24 4.84C24.07,5.33 26,17 26,20A10,10 0,0 1,16 30ZM9.42,8.73C8.83,12.49 8,18.13 8,20a8,8 0,0 0,16 0c0,-1.87 -0.83,-7.51 -1.42,-11.27l-2.65,6.64a1,1 0,0 1,-1 0.63,1 1,0 0,1 -0.9,-0.76L16,7.12l-2,8.12a1,1 0,0 1,-0.9 0.76,1 1,0 0,1 -1,-0.63Z"
-      android:fillColor="#000000"/>
-  <path
-      android:pathData="M20.94,21.35a1,1 0,0 0,-1.48 -0.75A2.9,2.9 0,0 1,18 21a3,3 0,0 1,-3 -2.61,1 1,0 0,0 -0.54,-0.76 1,1 0,0 0,-0.94 0A5,5 0,1 0,21 22,4.46 4.46,0 0,0 20.94,21.35Z"
-      android:fillColor="#000000"/>
-  <path
-      android:pathData="M24.51,22.91 L24,19.23c0,2.25 -4.15,6.12 -8,6.12s-8.35,-5.22 -7.91,-6.9L7,19.21c0,0.3 0,0.57 0,0.79a9,9 0,0 0,17.51 2.91Z"
+      android:pathData="M50.1,30.56a1.16,1.16 0,0 1,-2 0.82L42.73,26 30.32,36.65a3.39,3.39 0,0 1,-4.92 0l-7.49,-8.54L4.57,39.81a1.13,1.13 0,0 1,-1.64 0l-0.59,-0.59a1.13,1.13 0,0 1,0 -1.64L15.46,19.68a3.39,3.39 0,0 1,4.92 0l7.49,7.49 7.61,-8.78 -4.92,-4.45a1.26,1.26 0,0 1,0.82 -2.11H47.76A2.35,2.35 0,0 1,50 14.3Z"
       android:fillColor="#000000"/>
 </vector>
