--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -22,7 +22,7 @@
                 app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
-                android:id="@+id/title"
+                android:id="@+id/title_consult_now"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="-16dp"
@@ -41,22 +41,10 @@
                 layout="@layout/inclue_layout_kundli"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/title" />
-
-            <!-- Swipable Banner (ViewPager2) -->
-            <androidx.viewpager2.widget.ViewPager2
-                android:id="@+id/banner_viewpager"
-                android:layout_width="match_parent"
-                android:layout_height="60dp"
-                android:layout_marginHorizontal="16dp"
-                android:layout_marginVertical="16dp"
-                android:background="@drawable/rounded_viewpager_background"
-                android:clipToOutline="true"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/include_kundli" />
+                app:layout_constraintTop_toBottomOf="@id/title_consult_now" />
 
             <!-- Label for Astrologers Section -->
             <TextView
@@ -71,7 +59,7 @@
                 android:textSize="18sp"
                 android:textStyle="bold"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/banner_viewpager" />
+                app:layout_constraintTop_toBottomOf="@id/include_kundli" />
 
             <!-- RecyclerView for Astrologers -->
             <androidx.recyclerview.widget.RecyclerView
