--- a/app/src/main/res/layout/fragment_trending.xml
+++ b/app/src/main/res/layout/fragment_trending.xml
@@ -5,7 +5,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@android:color/white"
+        android:background="@drawable/splash_background"
         android:padding="16dp"
         tools:context=".HoroscopeFragment">
 
@@ -77,8 +77,9 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_margin="16dp"
-                android:orientation="vertical">
+                android:background="@drawable/astrology_background"
+                android:orientation="vertical"
+                android:padding="16dp">
 
                 <TextView
                     android:id="@+id/tv_sign_name"
