--- a/app/src/main/res/layout/inclue_layout_kundli.xml
+++ b/app/src/main/res/layout/inclue_layout_kundli.xml
@@ -2,6 +2,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/cl_kundli"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="16dp">
@@ -98,17 +99,27 @@
             app:layout_constraintTop_toBottomOf="@+id/kundli_text"
             app:layout_constraintWidth_percent="0.3">
 
-            <LinearLayout
+            <ImageView
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:layout_gravity="end"
+                android:src="@drawable/coming_soon"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:gravity="center"
-                android:orientation="vertical"
                 android:padding="16dp">
 
                 <ImageView
+                    android:id="@+id/img_love_match"
                     android:layout_width="40dp"
                     android:layout_height="40dp"
-                    android:src="@drawable/love_match" />
+                    android:src="@drawable/love_match"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -118,8 +129,11 @@
                     android:fontFamily="@font/poppins_regular"
                     android:gravity="center"
                     android:text="Love Match"
-                    android:textSize="12sp" />
-            </LinearLayout>
+                    android:textSize="12sp"
+                    app:layout_constraintEnd_toEndOf="@id/img_love_match"
+                    app:layout_constraintStart_toStartOf="@id/img_love_match"
+                    app:layout_constraintTop_toBottomOf="@id/img_love_match" />
+            </androidx.constraintlayout.widget.ConstraintLayout>
         </androidx.cardview.widget.CardView>
 
         <!-- CardView 3 -->
@@ -134,6 +148,14 @@
             app:layout_constraintStart_toEndOf="@+id/card_view_2"
             app:layout_constraintTop_toBottomOf="@+id/kundli_text"
             app:layout_constraintWidth_percent="0.3">
+
+            <ImageView
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:layout_gravity="end"
+                android:src="@drawable/coming_soon"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
             <LinearLayout
                 android:layout_width="match_parent"
